--- a/src/pages/Projetos/projects/crackthecode/crackthecode.css
+++ b/src/pages/Projetos/projects/crackthecode/crackthecode.css
@@ -8,6 +8,16 @@
   flex-direction: column;
 }
 
+.backgroundCrackMedium {
+  background-color: rgb(218, 195, 69);
+  height: 100vh;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .nextLevelScreen {
   display: flex;
   justify-content: center;
@@ -46,4 +56,8 @@
   height: 40px;
   width: 100px;
   margin-bottom: 3rem;
+}
+
+.invisibleText {
+  color: transparent;
 }
