--- a/src/pages/Main/main.css
+++ b/src/pages/Main/main.css
@@ -574,6 +574,13 @@ button:hover {
   }
 }
 
+@media (min-width: 540px) {
+  .div-botoes {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 @media (max-width: 540px) {
   .div-botoes {
     display: grid;
