--- a/src/pages/Projetos/projetos.css
+++ b/src/pages/Projetos/projetos.css
@@ -19,6 +19,10 @@ main {
 .mainProjects {
   background-image: linear-gradient(180deg, #3c0541, #65086eb9);
   height: 100vh;
+  display: flex;
+  flex-direction: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .backMainPanel {
@@ -73,7 +77,7 @@ main {
 .glow-on-hover {
   border: 2px solid black;
   outline: none;
-  color: #black;
+  color: black;
   background-color: white;
   cursor: pointer;
   position: relative;
@@ -265,4 +269,332 @@ main {
 #crackTheCodeButton:active {
   transform: translateY(2px);
   box-shadow: 0 0px 0;
+}
+
+/*===========================RESPONSIVE===================================*/
+
+@media (min-width: 1269px) {
+  .backMainPanel {
+    width: 75%;
+    height: 580px;
+  }
+
+  .mainPanel {
+    width: 99%;
+    height: 520px;
+  }
+
+  .projectButton {
+    margin: 0;
+    width: 200px;
+    height: 120px;
+  }
+
+  .botoesProjetos {
+    margin: 0;
+    margin-top: 50px;
+  }
+
+  .botoesProjetos button {
+    margin: 10px;
+    font-size: 18px;
+  }
+
+  .mainPanel h1 {
+    font-size: 50px;
+  }
+}
+
+@media (max-width: 1268px) {
+  .backMainPanel {
+    width: 85%;
+    height: 580px;
+  }
+
+  .mainPanel {
+    width: 99%;
+    height: 520px;
+  }
+
+  .projectButton {
+    margin: 0;
+    width: 200px;
+    height: 120px;
+  }
+
+  .botoesProjetos {
+    margin: 0;
+    margin-top: 50px;
+  }
+
+  .botoesProjetos button {
+    margin: 10px;
+    font-size: 18px;
+  }
+
+  .mainPanel h1 {
+    font-size: 50px;
+  }
+}
+
+@media (max-width: 1168px) {
+  .backMainPanel {
+    width: 85%;
+    height: 580px;
+  }
+
+  .mainPanel {
+    width: 99%;
+    height: 520px;
+  }
+
+  .projectButton {
+    margin: 0;
+    width: 200px;
+    height: 120px;
+  }
+
+  .botoesProjetos {
+    margin: 0;
+    margin-top: 50px;
+  }
+
+  .botoesProjetos button {
+    margin: 10px;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 1068px) {
+  .backMainPanel {
+    width: 80%;
+    height: 500px;
+  }
+
+  .mainPanel {
+    width: 99%;
+    height: 450px;
+  }
+
+  .projectButton {
+    margin: 0;
+    width: 180px;
+    height: 120px;
+  }
+
+  .botoesProjetos {
+    margin: 0;
+    margin-top: 50px;
+  }
+
+  .botoesProjetos button {
+    margin: 10px;
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 968px) {
+  .backMainPanel {
+    width: 80%;
+    height: 500px;
+  }
+
+  .mainPanel {
+    width: 99%;
+    height: 450px;
+  }
+
+  .projectButton {
+    margin: 0;
+    width: 150px;
+    height: 100px;
+  }
+
+  .botoesProjetos {
+    margin: 0;
+    margin-top: 50px;
+  }
+
+  .botoesProjetos button {
+    margin: 10px;
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 868px) {
+  .backMainPanel {
+    width: 80%;
+    height: 500px;
+  }
+
+  .mainPanel {
+    width: 99%;
+    height: 450px;
+  }
+
+  .projectButton {
+    margin: 0;
+    width: 120px;
+    height: 80px;
+  }
+
+  .botoesProjetos {
+    margin: 0;
+    margin-top: 50px;
+  }
+
+  .botoesProjetos button {
+    margin: 10px;
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 768px) {
+  .backMainPanel {
+    width: 80%;
+    height: 500px;
+  }
+
+  .mainPanel {
+    width: 99%;
+    height: 450px;
+  }
+
+  .projectButton {
+    margin: 0;
+    width: 120px;
+    height: 80px;
+  }
+
+  .botoesProjetos {
+    margin: 0;
+    margin-top: 50px;
+  }
+
+  .botoesProjetos button {
+    margin: 10px;
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 668px) {
+  .botoesProjetos button {
+    margin: 5px;
+  }
+}
+
+@media (max-width: 568px) {
+  .projectButton {
+    width: 100px;
+    height: 60px;
+  }
+
+  .botoesProjetos button {
+    margin: 5px;
+    font-size: 10px;
+  }
+
+  .backMainPanel {
+    width: 80%;
+    height: 400px;
+  }
+
+  .mainPanel {
+    width: 100%;
+    height: 350px;
+  }
+}
+
+@media (max-width: 468px) {
+  .projectButton {
+    width: 100px;
+    height: 60px;
+  }
+
+  .botoesProjetos button {
+    margin: 10px;
+    font-size: 10px;
+  }
+  .botoesProjetos {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .backMainPanel {
+    width: 80%;
+    height: 500px;
+  }
+
+  .mainPanel {
+    width: 100%;
+    height: 450px;
+  }
+
+  .mainPanel h1 {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 368px) {
+  .projectButton {
+    width: 100px;
+    height: 60px;
+  }
+
+  .botoesProjetos button {
+    margin: 10px;
+    font-size: 10px;
+  }
+  .botoesProjetos {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .backMainPanel {
+    width: 70%;
+    height: 500px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .mainPanel {
+    width: 100%;
+    height: 450px;
+  }
+
+  .mainPanel h1 {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 268px) {
+  .projectButton {
+    width: 100px;
+    height: 60px;
+  }
+
+  .botoesProjetos button {
+    margin: 5px;
+    font-size: 10px;
+  }
+  .botoesProjetos {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .backMainPanel {
+    width: 85%;
+    height: 500px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .mainPanel {
+    width: 100%;
+    height: 450px;
+  }
+
+  .mainPanel h1 {
+    font-size: 20px;
+  }
 }
