--- a/src/pages/Projetos/projetos.css
+++ b/src/pages/Projetos/projetos.css
@@ -271,6 +271,21 @@ main {
   box-shadow: 0 0px 0;
 }
 
+#crudSystemButton {
+  background-color: #744fc6;
+  border: 0;
+  transition-duration: 0.2s;
+}
+
+#crudSystemButton:hover {
+  box-shadow: 0 5px 0 #291750;
+}
+
+#crudSystemButton:active {
+  transform: translateY(2px);
+  box-shadow: 0 0px 0;
+}
+
 /*===========================RESPONSIVE===================================*/
 
 @media (min-width: 1269px) {
